Bug 769949 - GuaranteeResolve() must BlitDirtyFBOs() - r=bjacob